--- a/index.html
+++ b/index.html
@@ -38,3 +38,14 @@ layout: default
 
 </section>
 
+<h2>Etc&Link</h2>
+<ul>
+   
+    <li><a href="https://github.com/jaewoo-so">Github</a></li>
+    <li><a href="http://report.jaewoo-so.online/">SR Report generating</a></li>
+    <li><a href="https://github.com/jaewoo-so/ML_LIB">ML Lib : Data-science Competitions Toolkit/a></li>
+    <li><a href="https://github.com/jaewoo-so/SpeedyCoding">[C#] Functional Programing Toolkit</a></li>
+    <li><a href="http://report.jaewoo-so.online/">[C#] Graph Based Image Segmentation Implement</a></li>
+    
+    </ul>
+<ul>
