--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ layout: default
    
     <li><a href="https://github.com/jaewoo-so">Github</a></li>
     <li><a href="http://report.jaewoo-so.online/">SR Report generating</a></li>
-    <li><a href="https://github.com/jaewoo-so/ML_LIB">ML Lib : Data-science Competitions Toolkit/a></li>
+    <li><a href="https://github.com/jaewoo-so/ML_LIB">ML Lib : Data-science Competitions Toolkit</a></li>
     <li><a href="https://github.com/jaewoo-so/SpeedyCoding">[C#] Functional Programing Toolkit</a></li>
-    <li><a href="http://report.jaewoo-so.online/">[C#] Graph Based Image Segmentation Implement</a></li>
+    <li><a href="https://github.com/jaewoo-so/Cs_Graph-Based_Image_Segmentation">[C#] Graph Based Image Segmentation Implement</a></li>
     
     </ul>
 <ul>
