--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ layout: default
     </ul>
 <ul>
 
+<p>View Resume (이력서 / 경력기술서 / 履歴書 / 職務経歴書)) </p>
+<a href="http://resume.jaewoo-so.site/">Click here to visit the link</a>
+
 
 <h2>2020 - 2023</h2>
 <ul>
