--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <section class="posts">
 
-<p>View Resume (이력서 / 경력기술서 / 履歴書 / 職務経歴書)) </p>
-<a href="http://resume.jaewoo-so.site/">Click here to visit the link</a>
+<h3><a href="http://resume.jaewoo-so.site/"> <strong>Resume /이력서 / 경력기술서 / 履歴書 / 職務経歴書</strong></a> </h3>
+
 
 
 <h2>2020 - 2023</h2>
