--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@ layout: default
 
 <h2>Etc&Link</h2>
 <ul>
-   
     <li><a href="https://github.com/jaewoo-so">Github</a></li>
     <li><a href="http://report.jaewoo-so.online/">SR Report generating</a></li>
+    <li><a href="http://reportjp.jaewoo-so.online/">SRレポート⾃動⽣成 対話型システム</a></li>
     <li><a href="https://github.com/jaewoo-so/ML_LIB">ML Lib : Data-science Competitions Toolkit</a></li>
     <li><a href="https://github.com/jaewoo-so/SpeedyCoding">[C#] Functional Programing Toolkit</a></li>
     <li><a href="https://github.com/jaewoo-so/Cs_Graph-Based_Image_Segmentation">[C#] Graph Based Image Segmentation Implement</a></li>
-    
     </ul>
 <ul>
 </section>
